--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -2,35 +2,35 @@
 // Layouts
 // ==========================================================
 
-html, body, .layout  {
+html, body, .atk-layout  {
 	height: 100%;
 }
-.layout {
+.atk-layout {
 	.box-sizing;
 	display: table;
 	width: 100%;
-	>.layout-row, >.layout-column, .layout-row>.layout-column {
+	>.atk-layout-row, >.atk-layout-column, .atk-layout-row>.atk-layout-column {
 		height: 0.1%;
 		position: relative;
 	}
-	>.layout-row {
+	>.atk-layout-row {
 		display: table-row;
 		height: 0.01em;
-		&[class*='-expand'] {
+		.atk-expand {
 			height: auto;
 		}
 	}
-	>.layout-column, >.layout-row>.layout-column {
+	>.atk-layout-column, >.atk-layout-row>.atk-layout-column {
 		display: table-cell;
 		height: auto;
 		vertical-align: top;
 		width: 0.01em;
-		&[class*='-expand'] {
+		.atk-expand {
 			width: auto;
 		}
 	}
 }
-.wrapper {
+.atk-wrapper {
     margin-left: auto;
     margin-right: auto;
 }
@@ -40,19 +40,19 @@ html, body, .layout  {
 // Responsive Grid System
 // ==========================================================
 
-.row {
+.atk-row {
   .clear-fix;
-  >*[class*="col"] {
+  >*[class*="atk-col"] {
     float: left;
     min-height: 1px;
   }
 }
-.hide {
-  &, &[class*="layout"], &[class*="menu"][class*="-vertical"] {
+.atk-hide {
+  &, &[class*="atk-layout"], &[class*="atk-menu"][class*="-vertical"] {
     display: none !important;
   }
 }
-*[class*=show-] {
+*[class*=atk-show-] {
   display: none !important;
 }
 
@@ -60,19 +60,19 @@ html, body, .layout  {
 .generateColumns(@n:@cols, @m:@colsGutter, @i:1) when (@i =< @n) {
   // Percentage Column Gutter
   & when (ispercentage(@m)) {
-    .col-@{i} {
+    .atk-col-@{i} {
       @colsSingleWidth: (100% - @m * (@n - 1)) / @n;
       @colsInnerGutter: @m * (@i - 1);
       width: @colsSingleWidth * @i + @colsInnerGutter;
-      &.col-@{n} {
+      &.atk-col-@{n} {
         width: 100%;
       }
     }
   }
   // Pixel/EM Column Gutter
   & when not (ispercentage(@m)) {
-    .col-@{i} {
-      &, &[class*="col"] {
+    .atk-col-@{i} {
+      &, &[class*="atk-col"] {
         width: (@i * 100% / @n);
       }
     }
@@ -92,7 +92,7 @@ html, body, .layout  {
 
   // Layout
   .layoutCell(@w) {
-    .layout>.layout-row>.layout-cell {
+    .atk-layout>.atk-layout-row>.atk-layout-cell {
       min-width: @w;
     }
   }
@@ -104,7 +104,7 @@ html, body, .layout  {
          (isunit(@wm,'rem')) and (isunit(@wmin,'rem')),
          (isunit(@wm,'%')) and (isunit(@wmin,'%'))
   {
-    .wrapper {
+    .atk-wrapper {
       .box-sizing(content-box);
     }
     & when (@winmin = false) {
@@ -115,7 +115,7 @@ html, body, .layout  {
     .layoutCell(@winmin);
   }
 
-  .wrapper {
+  .atk-wrapper {
       min-width: @wmin;
       max-width: @wmax;
       padding-left: @wm;
@@ -124,33 +124,33 @@ html, body, .layout  {
 
   // Grid System
     & when (ispercentage(@g)) {
-      .row > *[class*="col"] + *[class*="col"] {
+      .atk-row > *[class*="atk-col"] + *[class*="atk-col"] {
         margin-left: @g;
       }
     }
     & when not (ispercentage(@g)) {
-      .row {
+      .atk-row {
         margin-left: -@g;
-        > *[class*="col"] {
+        > *[class*="atk-col"] {
           border-left:0px solid rgba(0,0,0,0);
           border-right:0px solid rgba(0,0,0,0);
           border-left-width: @g;
         }
       }
-      *[class*="col"] {
+      *[class*="atk-col"] {
         width: 100%;
       }
     }
   & when (iskeyword(@c)) and not (@c = false) {
-    .stack-@{c} {
-      &, &.cells, &.cells>.cell, &.row>[class*="col"] {
+    .atk-stack-@{c} {
+      &, &[class*="atk-cells"], &[class*="atk-cells"]>.atk-cell, &.atk-row>[class*="atk-col"] {
         display: block;
         border-width: 0;
         float: none;
         width: auto;
       }
-      &.row {
-        &, >[class*="col"] {
+      &.atk-row {
+        &, >[class*="atk-col"] {
           margin-left: 0;
         }
       }
@@ -159,14 +159,14 @@ html, body, .layout  {
           display: block;
         }
       }
-      &.cells {
-        >.cell + .cell {
+      &[class*="atk-cells"] {
+        >.atk-cell + .atk-cell {
           margin-top: @margin;
         }
         &[class*="cells"][class*="-spacing"] {
-          >.cell {
+          >.atk-cell {
             padding-right: 0;
-            + .cell {
+            + .atk-cell {
               padding-left: 0;
             }
           }
@@ -179,33 +179,33 @@ html, body, .layout  {
         }
       }
     }
-    .hide-@{c} {
-      &, &[class*="button"] {
+    .atk-hide-@{c} {
+      &, &[class*="atk-button"] {
         display: none !important;
       }
     }
-    .show-@{c} {
-      &, &[class*="icon"], &[class*="button"] {
+    .atk-show-@{c} {
+      &, &[class*="icon"], &[class*="atk-button"] {
         display: inline-block !important;
       }
     }
-    .expand-@{c} {
+    .atk-expand-@{c} {
       display: block !important;
       width: 100% !important;
     }
   }
   & when (@b = true) {
-    .layout {
-      &, >.layout-column, .layout-cell, .layout-row {
+    .atk-layout {
+      &, >.atk-layout-column, .atk-layout-cell, .atk-layout-row {
         display: block;
       }
-      .layout-row {
+      .atk-layout-row {
         height: auto;
       }
     }
-    *[class*="menu"] {
+    *[class*="atk-menu"] {
       >li {
-        >*[class*="menu"] {
+        >*[class*="atk-menu"] {
           bottom: 0 !important;
           left: 0 !important;
           position: relative !important;
@@ -216,7 +216,7 @@ html, body, .layout  {
             float: none;
           }
         }
-        &:hover>*[class*="menu"] {
+        &:hover>*[class*="atk-menu"] {
           display: none !important;
         }
         &:focus {
