--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -27,24 +27,24 @@ h1, h2, h3, h4, h5, h6 {
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
     text-transform: @headingCase;
     margin: @margin 0 round(@margin/2,2) 0;
-    &:extend([class*="text"][class*="-lead"]);
+    &:extend([class*="atk-text"][class*="-lead"]);
     &:first-child {
         margin-top: 0;
     }
 }
-h1 { &:extend([class*="text"][class*="-size--5xl"]); }
-h2 { &:extend([class*="text"][class*="-size--3xl"]); }
-h3 { &:extend([class*="text"][class*="-size--xl"]); }
-h4 { &:extend([class*="text"][class*="-size--l"]); }
-h5 { &:extend([class*="text"][class*="-size--m"]); }
-h6, small { &:extend([class*="text"][class*="-size--xs"]); }
+h1 { &:extend([class*="atk-text"][class*="-size--5xl"]); }
+h2 { &:extend([class*="atk-text"][class*="-size--3xl"]); }
+h3 { &:extend([class*="atk-text"][class*="-size--xl"]); }
+h4 { &:extend([class*="atk-text"][class*="-size--l"]); }
+h5 { &:extend([class*="atk-text"][class*="-size--m"]); }
+h6, small { &:extend([class*="atk-text"][class*="-size--xs"]); }
 
 
 // ==========================================================
 // Text Styles
 // ==========================================================
 
-[class*="text"] {
+[class*="atk-text"] {
     &[class*="-heading"] {
         font-family: @headingFamily;
     }
@@ -181,7 +181,7 @@ ul, ol, dl {
     }
 }
 ul, ol {
-    &.list-nobullets {
+    &.atk-list-nobullets {
         margin-left: 0;
         padding-left: 0;
         list-style-type: none;
@@ -190,19 +190,14 @@ ul, ol {
             padding-left: 1em;
         }
     }
-    &.list-inline {
+    &.atk-list-inline {
         li {
             display: inline;
             margin: 0;
             padding: 0;
-            &:first-child {
-                .sep {
-                    display: none;
-                }
-            }
         }
     }
-    &.list-nospacing {
+    &.atk-list-nospacing {
         &, ul, ol {
             padding-left: 1em;
         }
@@ -221,7 +216,7 @@ p {
     margin: 0 0 @margin 0;
 }
 blockquote {
-    &:extend([class*="text"][class*="-size--l"]);
+    &:extend([class*="atk-text"][class*="-size--l"]);
     font-style: italic;
     font-weight: 300;
     margin: 0 @margin @margin;
@@ -240,7 +235,7 @@ code, kbd, pre, samp {
 }
 pre {
     font-family: monospace, serif;
-    &:extend([class*="text"][class*="-size--s"]);
+    &:extend([class*="atk-text"][class*="-size--s"]);
     white-space: pre-wrap;
     word-wrap: break-word;
 }
